Fix reszing issue on mobile

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -18,6 +18,23 @@ body {
   margin: 0;
   background-attachment: fixed;
   max-width: 100%;
+  position: fixed;
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(photos/2452.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .hamburger {
